tests/baselines/reference/parserRegularExpressionDivideAmbiguity4.errors.txt
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity4.ts(1,1): error TS2304: Cannot find name 'foo'.
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity4.ts(1,5): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity4.ts(1,6): error TS1161: Unterminated regular expression literal.
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity4.ts(1,6): error TS2304: Cannot find name 'notregexp'.


==== tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity4.ts (4 errors) ====
    foo(/notregexp);
    ~~~
!!! error TS2304: Cannot find name 'foo'.
        ~
!!! error TS1109: Expression expected.
         
!!! error TS1161: Unterminated regular expression literal.
         ~~~~~~~~~
!!! error TS2304: Cannot find name 'notregexp'.